--- a/Server/Views/screenMessger.hbs
+++ b/Server/Views/screenMessger.hbs
@@ -68,7 +68,6 @@
       border-right-color: black;
       margin: 7px 7px 0px 8px;
       height: 552px;
-      border-radius: 8px;
       padding: 8px;
       overflow: auto;
     }
@@ -141,12 +140,61 @@
       padding: 8px;
       overflow: auto;
     }
+
+    .box-input {
+      width: 93%;
+      border: 1px solid;
+      line-height: 30px;
+      padding: 4px;
+      border-radius: 8px;
+    }
+
+    .box-input-err {
+      width: 93%;
+      border: 2px solid red;
+      line-height: 30px;
+      padding: 4px;
+      border-radius: 8px;
+    }
+
+    .box-chat-Main {
+      width: 100%;
+      height: 83%;
+      background: white;
+    }
+
+    .box-extra-chat {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      justify-content: space-between;
+    }
+
+    .box-All-Chat {
+      width: 18%;
+      border-right: 1.5px solid;
+      overflow: auto;
+      padding: 4px;
+      margin: 8px;
+    }
+
+    .box-One-Chat {
+      width: 80%
+    }
+
+    .box-Content-One-chat {
+      overflow: auto;
+      height: 80%;
+      padding: 14px 8px;
+      margin: 8px;
+      background: #f6ecec;
+      border-radius: 8px;
+    }
   </style>
 </head>
 
 <body class="bg-gray-200">
 <div class="flex" id="dataALL" style="height: 100%;">
-  <!--Side Navbar-->
   <div class="bg-indigo-900 w-1/6 ">
     <div class=" bg-indigo-800">
       <div class=" text-xl text-gray-200 uppercase font-bold" style="padding: 33px;">Shop BipBip</div>
@@ -208,59 +256,56 @@
       </a>
     </div>
   </div>
-  <!--Side Navbar-->
-
-  <!--Main area-->
-
   <div class="flex-1">
-    <!--Top navbar-->
     <div>
-
       <div class="bg-white px-2 py-0.5 h-18 flex">
         <div class="left md:w-3/4 sm:w-1/3 flex p-3">
           <img src="person.png" class="w-10 h-10" alt="">
           <span class="block p-2">Admin</span>
         </div>
         <div class="right md:w-1/4 sm:w-2/3 flex  justify-content-end ">
-          <a href="/login" style=" text-decoration: none; color: black; line-height: 58px; margin-right: 24px; ">Đăng xuất</a>
+          <a href="/login" style=" text-decoration: none; color: black; line-height: 58px; margin-right: 24px; ">Đăng
+            xuất</a>
         </div>
       </div>
     </div>
-    <!--Top navbar-->
-    <div class="card-container flex m-7 space-x-6 " style=" height: 555px;  justify-content: center;">
+    <div class="m-7">
 
-      <div id="load" class="spinner-border text-primary"></div>
+      <div style="width: 100%;text-align: center;">
+        <div id="load" class="spinner-border text-primary"></div>
+      </div>
 
-      <div class="card w-full" id="hienThidata" style="display: none">
-        <div class="card w-full" style="display: flex;flex-direction: row;padding: 8px">
-
-          <div class="box-chat">
-            <div v-for="item in dataTitleChat" :class="{'informationNew':item.status,'information':!item.status}"
-                 @click="OpenChatUser(item.user)">
-              \{{item.fullName}}
-            </div>
-          </div>
-          <div id="checkData" style="width: 80%" v-if="dataContentChat.length > 0">
-            <div class="name-user">
-              \{{nameUser}}
-            </div>
-            <div class="box-content">
-              <div id="listConten" class="contenChat" v-for="item in dataContentChat"
-                   :class="{'admin': item.beLong === 'admin', 'user': item.beLong !== 'admin'}">
-                \{{item.conTenMain}}
+      <div id="hienThidata" style="display: none">
+        <div class="box-chat-Main">
+          <div class="box-extra-chat">
+            <div class="box-All-Chat">
+              <div v-for="item in dataTitleChat" :class="{'informationNew':item.status,'information':!item.status}"
+                   @click="OpenChatUser(item.user)">
+                \{{item.fullName}}
               </div>
             </div>
-            <form @submit.prevent="submitContentChat" class="mb-3" style="margin: 0 14px;">
-              <div class="input-group">
-                <label class="form-control">
-                  <input style="width: 100%;outline: unset !important;" type="text"
-                         v-model="formData.conTenMain" required>
-                </label>
-                <div class="input-group-append" style="margin-left: 8px;">
-                  <button class="btn btn-primary" type="submit">Gửi</button>
+            <div id="checkData" class="box-One-Chat" v-if="dataContentChat.length > 0">
+              <div class="name-user">
+                \{{nameUser}}
+              </div>
+              <div class="box-Content-One-chat">
+                <div id="listConten" class="contenChat" v-for="item in dataContentChat"
+                     :class="{'admin': item.beLong === 'admin', 'user': item.beLong !== 'admin'}">
+                  \{{item.conTenMain}}
                 </div>
               </div>
-            </form>
+              <form @submit.prevent="submitContentChat" class="mb-3" style="margin: 0 14px;">
+                <div class="input-group">
+                  <label :class="checkInput ?'box-input-err': 'box-input'">
+                    <input style="width: 100%;outline: unset !important;" type="text"
+                           v-model="formData.conTenMain">
+                  </label>
+                  <div style="margin-left: 8px;">
+                    <button class="btn btn-primary" type="submit">Gửi</button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -287,7 +332,8 @@
         status: false
       },
       tinNhanMoi: 0,
-      donHangMoi: 0
+      donHangMoi: 0,
+      checkInput: false
     },
     mounted() {
       const socket = io();
@@ -295,7 +341,7 @@
       socket.on('server-send', () => {
         self.GetAllDataChat();
         self.GetDataCart();
-        if (self.idUser.length > 0){
+        if (self.idUser.length > 0) {
           self.OpenChatUser(self.idUser);
         }
       });
@@ -360,6 +406,7 @@
               self.nameUser = data.fullName
               self.dataContentChat = data.content
               self.checkClick = false;
+              self.checkInput = false
             })
             .catch(error => {
               console.error(error);
@@ -385,24 +432,28 @@
         var self = this;
         const socket = io();
         self.formData.user = self.idUser;
-
-        fetch('/home/chatShop', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(self.formData)
-        })
-            .then(response => response.json())
-            .then(data => {
-              if (data === true) {
-                socket.emit('client-send');
-                self.formData.conTenMain = '';
-              }
-            })
-            .catch(error => {
-              console.error(error);
-            });
+        if (self.formData.conTenMain.trim() === '') {
+          self.checkInput = true
+        } else {
+          fetch('/home/chatShop', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(self.formData)
+          })
+              .then(response => response.json())
+              .then(data => {
+                if (data === true) {
+                  socket.emit('client-send');
+                  self.formData.conTenMain = '';
+                  self.checkInput = false
+                }
+              })
+              .catch(error => {
+                console.error(error);
+              });
+        }
       }
     }
   })
